# NetSec

./: .gitignore  ALL_PROJECTS_SANITIZED.md  API_REFERENCE.md  ARCHITECTURE.md  ATTACK_VECTORS_VULNERABILITIES.md  CHANGELOG.md  CI_AND_BRANCH_PROTECTION.md  CLEANUP_SUMMARY.md  CLOUD_SECURITY_RESEARCH.md  CODE_READY_FOR_TESTING.md  CODE_SANITIZED_READY.md  COMPREHENSIVE_TESTING_FRAMEWORK.md  CONTAINER_CLOUD_ENHANCEMENTS.md  CONTAINER_SANITIZATION_COMPLETE.md  CONTAINER_SECURITY_RESEARCH.md  DEPENDENCY_AUDIT.md  DO_PUSH_NOW.ps1  ENHANCED_FEATURES_ROADMAP.md  ENTERPRISE_DOCUMENTATION.md  FINAL_STATUS.md  GAP_ANALYSIS.md  GITHUB_CHECKLIST.md  GITHUB_PUSH_GUIDE.md  GIT_PUSH_INSTRUCTIONS.md  LLM_AND_TESTING_UPDATE.md  LLM_POWERED_SCANNING.md  MASTER_INDEX.md  MID_PROJECT_EVALUATION.md  MITIGATION_REMEDIATION_GUIDE.md  PROJECT_CONSOLIDATION.md  PROJECT_ORGANIZATION.md  PROJECT_PROPOSAL.md  PROJECT_SPLIT_RECOMMENDATIONS.md  PROJECT_STATUS.md  PUSH_INSTRUCTIONS.md  PUSH_NOW.bat  QUICK_PUSH.md  README.md  README_GITHUB_PUSH.md  README_PUSH.md  (+36 more)
.github/workflows/: ci.yml  semgrep.yml
IMPLEMENTATION_PLANS/: NETSEC_CORE_IMPLEMENTATION.md
agents/: __init__.py  agent_cloud_security.py  agent_compliance.py  agent_container_security.py  agent_container_security_deep_dive.py  agent_dns.py  agent_governance.py  agent_ids.py  agent_network_monitoring.py  agent_risk.py  agent_ssl.py  agent_trends.py  agent_vulnerability_scanner.py  run_all_agents.py
netsec-cloud/: .gitignore  ARCHITECTURE_DESIGN.md  CHANGELOG.md  COMPLETE_STATUS.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  NETWORK_ARCHITECTURE.md  QUICKSTART.md  README.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt  run_sanity_report.py  run_tests.py  sanitize_and_test.py  setup.py
netsec-cloud/.github/workflows/: ci.yml
netsec-cloud/examples/: basic_scan.py
netsec-cloud/src/netsec_cloud/: __init__.py  scanner.py
netsec-cloud/src/netsec_cloud/api/: __init__.py  main.py  models.py
netsec-cloud/src/netsec_cloud/api/routes/: __init__.py  compliance.py  scan.py
netsec-cloud/src/netsec_cloud/checks/: __init__.py  base.py  iam.py  networking.py  storage.py
netsec-cloud/src/netsec_cloud/cli/: __init__.py  main.py
netsec-cloud/src/netsec_cloud/compliance/: __init__.py  mapping.py
netsec-cloud/src/netsec_cloud/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
netsec-cloud/tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_compliance.py  test_providers.py  test_scanner.py
netsec-container/: .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATE.md  PUSH_TO_EXISTING_REPO.md  PUSH_TO_GITHUB.md  QUICK_PUSH.md  README.md  ROADMAP.md  docker-compose.yml  push_to_github.ps1  push_to_github.sh  pyproject.toml  sanitize_and_test.py
netsec-container/.github/workflows/: ci.yml
netsec-container/docs/: CONTAINER_SCANNER_COMPLETE.md  README.md
netsec-container/docs/research/: CONTAINER_SECURITY_DEEP_DIVE_RESEARCH.md
netsec-container/src/netsec_container/: __init__.py
netsec-container/src/netsec_container/api/: __init__.py  main.py  models.py
netsec-container/src/netsec_container/cli/: main.py
netsec-container/src/netsec_container/core/: dockerfile.py  image_extractor.py  results.py  sbom.py  scanner.py  scoring.py  secrets.py  vulnerability.py  vulnerability_basic.py
netsec-container/src/netsec_container/llm/: __init__.py  analyzer.py
netsec-container/src/netsec_container/web/: app.py
netsec-container/tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_dockerfile.py  test_image_extractor.py  test_imports.py  test_scanner.py  test_scoring.py  test_secrets.py  test_vulnerability_basic.py
netsec-core/: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FINAL_CHECKLIST.md  FUTURE_ENHANCEMENTS.md  GITHUB_READY.md  HELP.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LLM_INTEGRATION.md  PRODUCTION_READY.md  QUICKSTART.md  README.md  README_GITHUB.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  TEST_INSTRUCTIONS.md  TEST_RESULTS.md  USAGE_GUIDE.md  VERIFICATION_COMPLETE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-llm.txt  requirements.txt  run_api.py  run_tests.py  sanitize_and_test.py  setup.py  test_quick.py  test_verification.py
scripts/: init_cloud.sh  init_container.sh  init_core.sh
vulnerability-intel/: README.md  queries.md  scanner-updates.md
(+265 files in other folders)
